# DevTasker

./: Instruções.txt  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
TODO_LIST/: requirements.txt
TODO_LIST/TODO_LIST/: asgi.py  settings.py  urls.py  wsgi.py
TODO_LIST/core/: choices.py
TODO_LIST/projects/: admin.py  forms.py  models.py  urls.py  views.py
TODO_LIST/projects/migrations/: 0001_initial.py  0002_rename_title_project_name.py  0003_project_status_alter_project_end_date_and_more.py  0004_project_owner_project_updated_at_and_more.py  0005_project_participants_alter_project_owner_and_more.py  0006_alter_project_participants_delete_projectinvite.py  0007_alter_project_status.py
TODO_LIST/tasks/: admin.py  forms.py  models.py  urls.py  views.py
TODO_LIST/tasks/migrations/: 0001_initial.py  0002_rename_title_task_name_remove_task_created_at_and_more.py  0003_task_assigned_to.py  0004_task_priority.py  0005_task_owner.py  0006_alter_task_priority.py  0007_task_completed_at_task_created_at_task_updated_at.py
TODO_LIST/templates/: base.html
TODO_LIST/users/: admin.py  choices.py  forms.py  managers.py  models.py  urls.py  views.py
TODO_LIST/users/migrations/: 0001_initial.py  0002_remove_user_senha_alter_user_password.py  0003_alter_user_username.py  0004_remove_user_username_alter_user_groups_and_more.py  0005_alter_user_managers.py  0006_user_cpf.py  0007_alter_user_cpf.py  0008_alter_user_cpf.py  0009_remove_user_cpf.py  0010_user_cpf.py  0011_user_country_alter_user_cpf.py  0012_user_sex.py  0013_remove_user_sex_user_gender.py  (+2 more)
(+25 files in other folders)
